--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>English Breakfast Club</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/styles.css" />
+  </head>
+  <body>
     <header></header>
     <main>
-        <h1>TITLE CHECK</h1>
+      <section class="first-page">
+        <div class="title-box"><h1>ENGLISH BREAKFAST CLUB</h1></div>
+        <a href="" class="start-btn">I AM IN</a>
+        <div class="subtitle-box">
+          <h2>flip some pancakes practise some phrases</h2>
+        </div>
+      </section>
     </main>
     <footer></footer>
-</body>
+  </body>
 </html>
