adding header and footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
-    <header></header>
+    <header class="header">
+      <p>platiins</p>
+    </header>
     <main>
       <section class="first-page">
         <div class="title-box"><h1>ENGLISH BREAKFAST CLUB</h1></div>
@@ -17,6 +19,8 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <p>powered by love and syrup</p>
+    </footer>
   </body>
 </html>
