--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>English Breakfast Club</title>
+    <!-- bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
@@ -13,14 +20,19 @@
     <main>
       <section class="first-page">
         <div class="title-box"><h1>ENGLISH BREAKFAST CLUB</h1></div>
-        <a href="" class="start-btn">I AM IN</a>
+        <a href="./pages/characters.html" class="start-btn">I AM IN</a>
         <div class="subtitle-box">
-          <h2>flip some pancakes practise some phrases</h2>
+          <h2>flip pancakes and practise language</h2>
         </div>
       </section>
     </main>
     <footer class="footer">
       <p>powered by love and syrup</p>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
